# Photo-Sketching

./: README.md  pyproject.toml  requirements.txt
src/photo_sketcher/: __init__.py  cli.py  sketcher.py
src/photo_sketcher/utils/: __init__.py  io_utils.py
tests/: test_sketcher.py
